[package]
name = "trab-final-meu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
csv = "1.1.6"

ansi_term = "0.12.1"

dialoguer = {version = "0.10.2",features =["fuzzy-select"] }